--- a/tomato-timer/package.json
+++ b/tomato-timer/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
   },
-  "private": true
+  "private": true,
+  "prettier": {
+    "tabWidth": 4
+  }
 }
