--- a/tomato-timer/package.json
+++ b/tomato-timer/package.json
@@ -9,10 +9,13 @@
     },
     "dependencies": {
         "expo": "^35.0.0",
+        "i": "^0.3.6",
+        "npm": "^6.13.1",
         "prop-types": "^15.7.2",
         "react": "16.8.3",
         "react-dom": "16.8.3",
         "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+        "react-native-24h-timepicker": "^1.1.0",
         "react-native-web": "^0.11.7",
         "react-redux": "^7.1.3",
         "redux": "^4.0.4"
